added captive portal for easy wifi configuration on location

--- a/secrets.yaml.example
+++ b/secrets.yaml.example
@@ -1,4 +1,8 @@
 wifi_name: "SSID"
 wifi_pass: "12345678"
+wifi_ap_name: "RC_Switch_API_Receiver"
+wifi_ap_pass: "12345678"
+web_server_username: admin
+web_server_password: admin
 api_token: "Bearer token"
 api_url: "https://prod-18.northeurope.logic.azure.com/workflows/..."
