--- a/rc_switch_api_receiver.yaml
+++ b/rc_switch_api_receiver.yaml
@@ -29,6 +29,12 @@ wifi:
   fast_connect: true
   power_save_mode: HIGH
 
+  ap:
+    ssid: !secret wifi_ap_name
+    password: !secret wifi_ap_pass
+
+captive_portal:
+
 logger:
   level: VERBOSE
 #  level: DEBUG
@@ -40,6 +46,9 @@ ota:
 # Enable for wireless debugging
 #web_server:
 #  port: 80
+#  auth:
+#    username: !secret web_server_username
+#    password: !secret web_server_password
 
 globals:
   - id: rccode
